# Barclay-Heritage

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  dev-requirements.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
barclay_heritage/: __init__.py  asgi.py  urls.py  wsgi.py
barclay_heritage/settings/: __init__.py  _production.py  examplesite.py  settings.py
main/: __init__.py  admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_car_description_car_mileage_car_pictures.py  __init__.py
main/templates/: base.html
main/templates/main/: about.html  base.html  blog.html  contact.html  gallery.html  index.html  navbar.html  services.html
static/js/: theme-switcher.js
