[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder

[project]
name = "barclay-heritage"
version = "0.0.1"
authors = [
    { name = "Sahil Raja", email = "sahilraja100@gmail.com" }]
requires-python = ">=3.13"
dependencies = [   
    "django",
    "django-bootstrap5",
    "django-crispy-forms",
    "whitenoise",
    "crispy-bootstrap5",
    "django_tables2",
    "django-filter",
    "huey"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock",
    "whitenoise",
    "django-stubs"
]

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=myproject --cov-report=html --doctest-modules --ignore=myproject/__main__.py"

[tool.ruff.lint]
select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
